created a markdown table for the data

--- a/MSDS Data Mining Project 1.ipynb
+++ b/MSDS Data Mining Project 1.ipynb
@@ -30,6 +30,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "| Feature Name (Original)       | Feature Name (English) | Description               | Variable Type                |\n",
+    "| ------------- |:-------------:| ----------------------:|--------------------------:|-----------------------------:|\n",
+    "| id_clinica                    | Clinic_ID              | ID# of the medical clinic | numeric                      |\n",
+    "| id_excel                      | Excel_File_ID          | ID# in original source    |                              |\n",
+    "| dia                           | Day                    | Day in birth month        | numeric                      |\n",
+    "| mes                           | Month                  | Birth month               | numeric                      |\n",
+    "| ano                           | Year                   | Birth year                | numeric                      |\n",
+    "| sex                           | Sex                    | Birth sex (Mujer/Hombre)  | numeric                      |\n",
+    "| peso                          | Weight                 | Birth weight in grams| numeric                           |\n",
+    "| talla                         | Length                 | Birth length in cm        | numeric                      |\n",
+    "| cc                            | Head_circ              | Head circumference in cm (eyebrow level) | numeric       |\n",
+    "| apgar                         | Apgar_1                | Apgar score 1 minute after birth | numeric               |\n",
+    "| apgar5                        | Apgar_5                | Apgar score 5 minutes after birth | numeric              |\n",
+    "| comuna                        | Municipality           | Avg. annual income in Chilean Pesos | numeric            |\n",
+    "| aeg                           | wgt_for_age            | Weight relative to gestational age | Categorical         |\n",
+    "| eg                            | Gest_age               | Gestational age at birth in weeks  | numeric             |\n",
+    "| trim_exp                      | Trimester              | Trimester when exposure occurred   | numeric             |\n",
+    "| bajo_peso                     | Low_bthwgt             | Indicator for weight under 2500 grams | Categorical      |\n",
+    "| pretermino                    | Premature              | Indicator for gestation period less than 37 weeks | Categorical  |\n",
+    "| edad_mama                     | Maternal_Age           | Age of mother in years    | numeric                      |\n",
+    "| paridad                       | Parity                 | Number of previous live births by same mother | numeric  |\n",
+    "| trim_exp_g                    | Trim_study             | Trimester of the control or exposure year (1-6)   | Categorical |\n",
+    "| pi                            | Pondural Index         | Score representing fetal growth | numeric                |\n",
+    "| exposed                       | Exposed                | Indicator of stress exposure that occurred during earthquake  | Categorical |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Data Understanding:"
    ]
   },
@@ -901,7 +931,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -915,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
