Posting clarkson files for reference

--- a/MSDS Data Mining Project 1.ipynb
+++ b/MSDS Data Mining Project 1.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,14 +359,15 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "url = 'https://github.com/ShonTM/DataMiningProject1/blob/master/Chilean%20Earthquake%20Perinatal%20Outcome_english_translation.csv'\n",
-    "df = pd.read_csv('G:/My Drive/Shon Mohsin/Southern Methodist University/7331 Data Mining S403/DataMiningProject1/Chilean Earthquake Perinatal Outcome_english_translation.csv')\n",
+    "\n",
+    "url = 'https://raw.githubusercontent.com/ShonTM/DataMiningProject1/master/Chilean%20Earthquake%20Perinatal%20Outcome_english_translation.csv' \n",
+    "df=pd.read_csv(url)\n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,13 +714,13 @@
    "source": [
     "#### Outliers:\n",
     "We see a few outliers from the scatterplots. Notable outliers are:\n",
-    "Weight VS length\n",
-    "Weight VS Head_circ\n",
-    "Length VS Head_circ\n",
-    "Ponderal_index VS Weight\n",
-    "Ponderal_index VS Length\n",
-    "Ponderal_index VS Head_circ\n",
-    "Ponderal_index VS Maternal_age"
+    "<br>Weight VS length\n",
+    "<br>Weight VS Head_circ\n",
+    "<br>Length VS Head_circ\n",
+    "<br>Ponderal_index VS Weight\n",
+    "<br>Ponderal_index VS Length\n",
+    "<br>Ponderal_index VS Head_circ\n",
+    "<br>Ponderal_index VS Maternal_age"
    ]
   },
   {
@@ -767,7 +768,7 @@
    "source": [
     "### Data Preparation\n",
     "\n",
-    "The columns are converted to their english values as described in the Data Overview section. The conversion is done directly to he csv file using excel and find and replace functions for the class variables. "
+    "The columns are converted to their english values as described in the Data Overview section. The conversion is done directly to the csv file using excel and find and replace functions for the class variables. "
    ]
   },
   {
@@ -776,7 +777,20 @@
    "source": [
     "#### Statistical Visualization\n",
     "\n",
-    "Subset Selection for visualization"
+    "We divide our buckets by the binary 'Exposed' column to see if there are visually discernable features that are evident between infants that were born before the earthquake or after the earthquake. \n",
+    "\n",
+    "Subset Selection for visualization:\n",
+    "<br>Sex\n",
+    "<br>Maternal_age\n",
+    "<br>Municipality\n",
+    "<br>Gest_age\n",
+    "<br>Trimester\n",
+    "<br>Low_birthwgt\n",
+    "<br>Parity\n",
+    "<br>Apgar_5\n",
+    "<br>Premature\n",
+    "<br>Ponderal_Index\n",
+    "\n"
    ]
   },
   {
