Added some more description of APGAR scores

--- a/MSDS Data Mining Project 1.ipynb
+++ b/MSDS Data Mining Project 1.ipynb
@@ -103,6 +103,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One additional comment on APGAR scores.  APGAR is an acronym for several categories: Activity, Pulse, Grimace, Appearance, and Respiration.  It is used to identify crucial vitality markers in a newborn.  Points are assigned to each each category based on amount of activity observed.  The sum of all points represents the APGAR score."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -1292,31 +1299,10 @@
     "Infant weight and length are used as inputs for the Ponderal index score.  \n",
     "Other potential new features could be:\n",
     "+ Discretizing some of the continuous variables into categories with larger differences (e.g. small/mid/large length)\n",
-    "+ Researching existing documentation on Apgar and identifying potential use of linear combinations of Apgar scores\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Sex', 'Weight', 'Length', 'Head_circ', 'Apgar_1', 'Apgar_5',\n",
-       "       'Municipality', 'wgt_for_age', 'Gest_age', 'Trimester', 'Low_birthwgt',\n",
-       "       'Premature', 'Maternal_age', 'Parity', 'Trim_study', 'Ponderal_index',\n",
-       "       'Exposed'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_lite.columns"
+    "+ Convert the APGAR scores into the meaningful categories that the numbers represent:\n",
+    " + 0-3 = Severely depressed infant\n",
+    " + 4-6 = Moderately depressed infant\n",
+    " + or 7-10 = Excellent condition\n"
    ]
   },
   {
